# aetherier

./: README.md
tools/ofuda/: .gitignore  README.md  index.html  package-lock.json  package.json
tools/ofuda/src/: App.tsx  storage.ts  styles.css  taskLogic.test.ts  taskLogic.ts  types.ts
tools/ofuda/src-tauri/: Cargo.toml  tauri.conf.json
tools/ofuda/src-tauri/src/: lib.rs  main.rs
tools/ofuda/src/components/: BoardView.tsx  CategorySettings.tsx  CategoryView.tsx  DueView.tsx  EmptyState.tsx  TableView.tsx  TaskForm.tsx  TaskMeta.tsx  Toolbar.tsx  categoryHelpers.ts
